--- a/resources/sass/_home.sass
+++ b/resources/sass/_home.sass
@@ -1,3 +1,28 @@
+.home-hero-image 
+    height: 40rem
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
+    position: relative
+    margin-bottom: 5%
+
+.home-hero-text
+    text-align: left
+    position: absolute
+    top: 75%
+    left: 25%
+    padding: 2%
+    transform: translate(-50%, -50%)
+    color: white
+    background-color: rgba(0, 0, 0, .7)
+    border-radius: 1%
+
+    h1
+        font-size: 4em
+
+    .home-hero-summary
+        font-size: 1.4em
+
 .title
     font-size: 4em
     margin-bottom: 5%
@@ -7,4 +32,12 @@
     display: flex
     justify-content: center
 
+.article-container
+    justify-content: space-between
 
+@media screen and (max-width: 860px)
+    .home-hero-text
+        text-align: center
+        width: 95%
+        top: 75%
+        left: 50%
