Finished footer on site layout

--- a/resources/sass/_site.sass
+++ b/resources/sass/_site.sass
@@ -1,2 +1,24 @@
 body
     margin: 0
+
+footer
+    background: rgba(0,0,0,0.03)
+    font-size: 1.4rem
+    line-height: 1.6
+    color: rgba(0,0,0,0.65)
+    margin-top: auto
+    padding-bottom: 3.6rem
+    padding-top: 3.6rem
+    position: relative
+    z-index: 23
+    text-align: center
+
+.bottom-links
+    max-width: 500px
+    margin: 0 auto
+
+    a
+        color: rgba(0,0,0,0.8)
+
+        &:hover
+            text-decoration: none
