Recompiled public CSS & JS

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11162,6 +11162,32 @@ body {
   margin: 0;
 }
 
+footer {
+  background: rgba(0, 0, 0, 0.03);
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: rgba(0, 0, 0, 0.65);
+  margin-top: auto;
+  padding-bottom: 3.6rem;
+  padding-top: 3.6rem;
+  position: relative;
+  z-index: 23;
+  text-align: center;
+}
+
+.bottom-links {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.bottom-links a {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.bottom-links a:hover {
+  text-decoration: none;
+}
+
 .profile-bio {
   font-size: 1.1em;
   font-weight: bold;
@@ -11207,7 +11233,8 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  white-space: nowrap;
+  word-wrap: breakword;
+  padding: 2% 3%;
 }
 
 .hero {
