Picked new site font

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,6 +2,8 @@
 $body-bg: #f8fafc;
 
 // Typography
+$font-family-open-sans: 'Open Sans', sans-serif;
+$font-family-archivo: 'Archivo', serif;
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
