--- a/resources/sass/_site.sass
+++ b/resources/sass/_site.sass
@@ -1,5 +1,9 @@
 body
+    font-family: $font-family-open-sans
     margin: 0
+
+h1, h2, h3, h4, h5, h6
+    font-family: $font-family-archivo
 
 main
     min-height: calc(100vh - 12rem)
