--- a/resources/sass/_article.sass
+++ b/resources/sass/_article.sass
@@ -32,3 +32,8 @@
 .bio
     font-weight: bold
     font-size: 1em
+
+.article-body img 
+    display: block
+    margin: 0 auto
+    max-width: 100%
